--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url(./assets/bg-mobile.jpg);
+  background-image: url(./assets/bg.desk.jpg.PNG);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
